help panel: fix internal link anchors

--- a/data/resources/help/latex2e_1.html
+++ b/data/resources/help/latex2e_1.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_0.html#Top" rel="prev" title="Top">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,11 +86,11 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="About-this-document"></a>
-<a name="About-this-document-1"></a>
+<a name="About-this-document" class="anchor"></a>
+<a name="About-this-document-1" class="anchor"></a>
 <h2 class="chapter">1 About this document</h2>
 
-<a name="index-home-page-for-manual"></a>
+<a name="index-home-page-for-manual" class="anchor"></a>
 <p>This is an unofficial reference manual for the LaTeX2e document
 preparation system, which is a macro package for the TeX
 typesetting program (see <a href="latex2e_2.html#Overview">Overview</a>).
@@ -104,21 +105,21 @@ note there about easy-to-remember links.  The other, shown at
 <a href="http://svn.gnu.org.ua/viewvc/latexrefman/trunk/latex2e.html?view=co">http://svn.gnu.org.ua/viewvc/latexrefman/trunk/latex2e.html?view=co</a>,
 has all the information on single page.
 </p>
-<a name="index-LaTeX-vs_002e-LaTeX2e"></a>
+<a name="index-LaTeX-vs_002e-LaTeX2e" class="anchor"></a>
 <p>In this document, we will mostly just use &lsquo;LaTeX&rsquo; rather than
 &lsquo;LaTeX2e&rsquo;, since the previous version of LaTeX&nbsp;(2.09) was
 frozen decades ago.
 </p>
-<a name="index-unofficial-nature-of-this-manual"></a>
-<a name="index-LaTeX-Project-team"></a>
-<a name="index-latexrefman_0040tug_002eorg-email-address"></a>
+<a name="index-unofficial-nature-of-this-manual" class="anchor"></a>
+<a name="index-LaTeX-Project-team" class="anchor"></a>
+<a name="index-latexrefman_0040tug_002eorg-email-address" class="anchor"></a>
 <p>LaTeX is currently maintained by a group of volunteers
 (<a href="http://latex-project.org">http://latex-project.org</a>).  The official documentation written by
 the LaTeX project is available from their web site.  This document is
 completely unofficial and has not been reviewed by the LaTeX
 maintainers.  
-<a name="index-bug-reporting"></a>
-<a name="index-reporting-bugs"></a>
+<a name="index-bug-reporting" class="anchor"></a>
+<a name="index-reporting-bugs" class="anchor"></a>
 Do not send bug reports or anything else about this document to them.
 Instead, please send all comments to <a href="mailto:latexrefman@tug.org">latexrefman@tug.org</a>.
 </p>
@@ -128,24 +129,24 @@ introductions.
 </p>
 <dl compact="compact">
 <dt><a href="http://ctan.org/pkg/latex-doc-ptr">http://ctan.org/pkg/latex-doc-ptr</a></dt>
-<dd><a name="index-latex_002ddoc_002dptr-document"></a>
+<dd><a name="index-latex_002ddoc_002dptr-document" class="anchor"></a>
 <p>Two pages of recommended references to LaTeX documentation.
 </p>
 </dd>
 <dt><a href="http://ctan.org/pkg/first-latex-doc">http://ctan.org/pkg/first-latex-doc</a></dt>
-<dd><a name="index-first_002dlatex_002ddoc-document"></a>
+<dd><a name="index-first_002dlatex_002ddoc-document" class="anchor"></a>
 <p>Writing your first document, with a bit of both text and math.
 </p>
 </dd>
 <dt><a href="http://ctan.org/pkg/usrguide">http://ctan.org/pkg/usrguide</a></dt>
-<dd><a name="index-usrguide-official-documentation"></a>
+<dd><a name="index-usrguide-official-documentation" class="anchor"></a>
 <p>The guide for document authors that is maintained as part of LaTeX.
 Many other guides by many other people are also available, independent
 of LaTeX itself; one such is the next item:
 </p>
 </dd>
 <dt><a href="http://ctan.org/pkg/lshort">http://ctan.org/pkg/lshort</a></dt>
-<dd><a name="index-lshort-document"></a>
+<dd><a name="index-lshort-document" class="anchor"></a>
 <p>A short introduction to LaTeX, translated to many languages.
 </p>
 </dd>
