--- a/data/resources/help/latex2e_10.html
+++ b/data/resources/help/latex2e_10.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_9.html#g_t_005clinebreak-_0026-_005cnolinebreak" rel="prev" title="\linebreak &amp; \nolinebreak">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,12 +86,12 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Page-breaking"></a>
-<a name="Page-breaking-1"></a>
+<a name="Page-breaking" class="anchor"></a>
+<a name="Page-breaking-1" class="anchor"></a>
 <h2 class="chapter">10 Page breaking</h2>
 
-<a name="index-page-breaking"></a>
-<a name="index-breaking-pages"></a>
+<a name="index-page-breaking" class="anchor"></a>
+<a name="index-breaking-pages" class="anchor"></a>
 
 <p>Ordinarily LaTeX automatically takes care of breaking output into
 pages with its usual aplomb.  But if you are writing commands, or
@@ -124,15 +125,15 @@ influence page breaks while preparing a final version of a document.
 
 
 <hr>
-<a name="g_t_005cclearpage-_0026-_005ccleardoublepage"></a>
-<a name="g_t_005cclearpage-_0026-_005ccleardoublepage-1"></a>
+<a name="g_t_005cclearpage-_0026-_005ccleardoublepage" class="anchor"></a>
+<a name="g_t_005cclearpage-_0026-_005ccleardoublepage-1" class="anchor"></a>
 <h3 class="section">10.1 <code>\clearpage</code> &amp; <code>\cleardoublepage</code></h3>
 
-<a name="index-_005cclearpage"></a>
-<a name="index-flushing-floats-and-starting-a-page"></a>
-<a name="index-starting-a-new-page-and-clearing-floats"></a>
-<a name="index-_005ccleardoublepage"></a>
-<a name="index-starting-on-a-right_002dhand-page"></a>
+<a name="index-_005cclearpage" class="anchor"></a>
+<a name="index-flushing-floats-and-starting-a-page" class="anchor"></a>
+<a name="index-starting-a-new-page-and-clearing-floats" class="anchor"></a>
+<a name="index-_005ccleardoublepage" class="anchor"></a>
+<a name="index-starting-on-a-right_002dhand-page" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -181,13 +182,13 @@ two-column mode then <code>\newpage</code> ends the current column while
 
 
 <hr>
-<a name="g_t_005cnewpage"></a>
-<a name="g_t_005cnewpage-1"></a>
+<a name="g_t_005cnewpage" class="anchor"></a>
+<a name="g_t_005cnewpage-1" class="anchor"></a>
 <h3 class="section">10.2 <code>\newpage</code></h3>
 
-<a name="index-_005cnewpage"></a>
-<a name="index-new-page_002c-starting"></a>
-<a name="index-starting-a-new-page"></a>
+<a name="index-_005cnewpage" class="anchor"></a>
+<a name="index-new-page_002c-starting" class="anchor"></a>
+<a name="index-starting-a-new-page" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -226,12 +227,12 @@ stretch out the page, as <code>\pagebreak</code> does.
 </p>
 
 <hr>
-<a name="g_t_005cenlargethispage"></a>
-<a name="g_t_005cenlargethispage-1"></a>
+<a name="g_t_005cenlargethispage" class="anchor"></a>
+<a name="g_t_005cenlargethispage-1" class="anchor"></a>
 <h3 class="section">10.3 <code>\enlargethispage</code></h3>
 
-<a name="index-_005cenlargethispage"></a>
-<a name="index-enlarge-current-page"></a>
+<a name="index-_005cenlargethispage" class="anchor"></a>
+<a name="index-enlarge-current-page" class="anchor"></a>
 
 <p>Synopsis, one of:
 </p>
@@ -261,14 +262,14 @@ explicit <code>\pagebreak</code>.
 </p>
 
 <hr>
-<a name="g_t_005cpagebreak-_0026-_005cnopagebreak"></a>
-<a name="g_t_005cpagebreak-_0026-_005cnopagebreak-1"></a>
+<a name="g_t_005cpagebreak-_0026-_005cnopagebreak" class="anchor"></a>
+<a name="g_t_005cpagebreak-_0026-_005cnopagebreak-1" class="anchor"></a>
 <h3 class="section">10.4 <code>\pagebreak</code> &amp; <code>\nopagebreak</code></h3>
 
-<a name="index-_005cpagebreak"></a>
-<a name="index-_005cnopagebreak"></a>
-<a name="index-page-break_002c-forcing"></a>
-<a name="index-page-break_002c-preventing"></a>
+<a name="index-_005cpagebreak" class="anchor"></a>
+<a name="index-_005cnopagebreak" class="anchor"></a>
+<a name="index-page-break_002c-forcing" class="anchor"></a>
+<a name="index-page-break_002c-preventing" class="anchor"></a>
 
 <p>Synopses:
 </p>
