--- a/data/resources/help/latex2e_15.html
+++ b/data/resources/help/latex2e_15.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_14.html#g_t_005csettowidth" rel="prev" title="\settowidth">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,12 +86,12 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Making-paragraphs"></a>
-<a name="Making-paragraphs-1"></a>
+<a name="Making-paragraphs" class="anchor"></a>
+<a name="Making-paragraphs-1" class="anchor"></a>
 <h2 class="chapter">15 Making paragraphs</h2>
 
-<a name="index-making-paragraphs"></a>
-<a name="index-paragraphs"></a>
+<a name="index-making-paragraphs" class="anchor"></a>
+<a name="index-paragraphs" class="anchor"></a>
 
 <p>To start a paragraph, just type some text.  To end the current
 paragraph, put an empty line.  This is three paragraphs, separated by
@@ -143,12 +144,12 @@ complete</samp>&rsquo;.
 
 
 <hr>
-<a name="g_t_005cpar"></a>
-<a name="g_t_005cpar-1"></a>
+<a name="g_t_005cpar" class="anchor"></a>
+<a name="g_t_005cpar-1" class="anchor"></a>
 <h3 class="section">15.1 <code>\par</code></h3>
 
-<a name="index-_005cpar"></a>
-<a name="index-paragraph_002c-ending"></a>
+<a name="index-_005cpar" class="anchor"></a>
+<a name="index-paragraph_002c-ending" class="anchor"></a>
 
 <p>Synopsis (note that while reading the input TeX converts two
 consecutive newlines to a <code>\par</code>):
@@ -206,14 +207,14 @@ there is an empty horizontal space of 3&nbsp;inches and then
 </p>
 
 <hr>
-<a name="g_t_005cindent-_0026-_005cnoindent"></a>
-<a name="g_t_005cindent-_0026-_005cnoindent-1"></a>
+<a name="g_t_005cindent-_0026-_005cnoindent" class="anchor"></a>
+<a name="g_t_005cindent-_0026-_005cnoindent-1" class="anchor"></a>
 <h3 class="section">15.2 <code>\indent</code> &amp; <code>\noindent</code></h3>
 
-<a name="index-_005cindent"></a>
-<a name="index-_005cnoindent"></a>
-<a name="index-_005cparindent-1"></a>
-<a name="index-indent_002c-forcing"></a>
+<a name="index-_005cindent" class="anchor"></a>
+<a name="index-_005cnoindent" class="anchor"></a>
+<a name="index-_005cparindent-1" class="anchor"></a>
+<a name="index-indent_002c-forcing" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -265,8 +266,8 @@ because LaTeX is already in horizontal mode there.  The
 you may want to also set the length of spaces between paragraphs,
 <code>\parskip</code> (see <a href="#g_t_005cparindent-_0026-_005cparskip">\parindent &amp; \parskip</a>).
 </p>
-<a name="index-package_002c-indentfirst-5"></a>
-<a name="index-indentfirst-package-5"></a>
+<a name="index-package_002c-indentfirst-5" class="anchor"></a>
+<a name="index-indentfirst-package-5" class="anchor"></a>
 
 <p>Default LaTeX styles have the first paragraph after a section that is
 not indented, as is traditional typesetting in English.  To change that,
@@ -274,14 +275,14 @@ look on CTAN for the package <code>indentfirst</code>.
 </p>
 
 <hr>
-<a name="g_t_005cparindent-_0026-_005cparskip"></a>
-<a name="g_t_005cparindent-_0026-_005cparskip-1"></a>
+<a name="g_t_005cparindent-_0026-_005cparskip" class="anchor"></a>
+<a name="g_t_005cparindent-_0026-_005cparskip-1" class="anchor"></a>
 <h3 class="section">15.3 <code>\parindent</code> &amp; <code>\parskip</code></h3>
 
-<a name="index-_005cparindent-2"></a>
-<a name="index-_005cparskip"></a>
-<a name="index-paragraph-indentation"></a>
-<a name="index-vertical-space-before-paragraphs"></a>
+<a name="index-_005cparindent-2" class="anchor"></a>
+<a name="index-_005cparskip" class="anchor"></a>
+<a name="index-paragraph-indentation" class="anchor"></a>
+<a name="index-vertical-space-before-paragraphs" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -314,14 +315,14 @@ value for <code>\parskip</code> in LaTeX&rsquo;s standard document styles is
 </p>
 
 <hr>
-<a name="Marginal-notes"></a>
-<a name="Marginal-notes-1"></a>
+<a name="Marginal-notes" class="anchor"></a>
+<a name="Marginal-notes-1" class="anchor"></a>
 <h3 class="section">15.4 Marginal notes</h3>
 
-<a name="index-marginal-notes"></a>
-<a name="index-notes-in-the-margin"></a>
-<a name="index-remarks-in-the-margin"></a>
-<a name="index-_005cmarginpar"></a>
+<a name="index-marginal-notes" class="anchor"></a>
+<a name="index-notes-in-the-margin" class="anchor"></a>
+<a name="index-remarks-in-the-margin" class="anchor"></a>
+<a name="index-_005cmarginpar" class="anchor"></a>
 
 <p>Synopsis, one of:
 </p>
@@ -342,8 +343,8 @@ two-sided layout (document option <code>twoside</code>) then it goes in the
 outside margin.  If you are in two-column layout (document option
 <code>twocolumn</code>) then it goes in the nearest margin.
 </p>
-<a name="index-_005creversemarginpar"></a>
-<a name="index-_005cnormalmarginpar"></a>
+<a name="index-_005creversemarginpar" class="anchor"></a>
+<a name="index-_005cnormalmarginpar" class="anchor"></a>
 <p>If you declare <code>\reversemarginpar</code> then LaTeX will place
 subsequent marginal notes in the opposite margin to that given in the
 prior paragraph.  Revert that to the default position with
@@ -361,23 +362,23 @@ hyphenation there by beginning <var>left</var> or <var>right</var> with
 </p>
 <dl compact="compact">
 <dt><code>\marginparpush</code>
-<a name="index-_005cmarginparpush-2"></a>
+<a name="index-_005cmarginparpush-2" class="anchor"></a>
 </dt>
-<dd><a name="marginal-notes-marginparpush"></a><p>Minimum vertical space between notes; default &lsquo;<samp>7pt</samp>&rsquo; for
+<dd><a name="marginal-notes-marginparpush" class="anchor"></a><p>Minimum vertical space between notes; default &lsquo;<samp>7pt</samp>&rsquo; for
 &lsquo;<samp>12pt</samp>&rsquo; documents, &lsquo;<samp>5pt</samp>&rsquo; else.
 </p>
 </dd>
 <dt><code>\marginparsep</code>
-<a name="index-_005cmarginparsep"></a>
+<a name="index-_005cmarginparsep" class="anchor"></a>
 </dt>
-<dd><a name="marginal-notes-marginparsep"></a><p>Horizontal space between the main text and the note; default
+<dd><a name="marginal-notes-marginparsep" class="anchor"></a><p>Horizontal space between the main text and the note; default
 &lsquo;<samp>11pt</samp>&rsquo; for &lsquo;<samp>10pt</samp>&rsquo; documents, &lsquo;<samp>10pt</samp>&rsquo; else.
 </p>
 </dd>
 <dt><code>\marginparwidth</code>
-<a name="index-_005cmarginparwidth-2"></a>
+<a name="index-_005cmarginparwidth-2" class="anchor"></a>
 </dt>
-<dd><a name="marginal-notes-marginparwidth"></a><p>Width of the note itself; default for a one-sided &lsquo;<samp>10pt</samp>&rsquo; document
+<dd><a name="marginal-notes-marginparwidth" class="anchor"></a><p>Width of the note itself; default for a one-sided &lsquo;<samp>10pt</samp>&rsquo; document
 is &lsquo;<samp>90pt</samp>&rsquo;, &lsquo;<samp>83pt</samp>&rsquo; for &lsquo;<samp>11pt</samp>&rsquo;, and &lsquo;<samp>68pt</samp>&rsquo; for
 &lsquo;<samp>12pt</samp>&rsquo;; &lsquo;<samp>17pt</samp>&rsquo; more in each case for a two-sided document.
 In two column mode, the default is &lsquo;<samp>48pt</samp>&rsquo;.
