--- a/data/resources/help/latex2e_22.html
+++ b/data/resources/help/latex2e_22.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_21.html#Colored-pages" rel="prev" title="Colored pages">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,12 +86,12 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Graphics"></a>
-<a name="Graphics-1"></a>
+<a name="Graphics" class="anchor"></a>
+<a name="Graphics-1" class="anchor"></a>
 <h2 class="chapter">22 Graphics</h2>
 
-<a name="index-graphics"></a>
-<a name="index-graphics-package"></a>
+<a name="index-graphics" class="anchor"></a>
+<a name="index-graphics-package" class="anchor"></a>
 
 <p>You can use graphics such as PNG or PDF files in your LaTeX document.
 You need an additional package, which comes standard with LaTeX.
@@ -132,12 +133,12 @@ see their documentation on CTAN.
 
 
 <hr>
-<a name="Graphics-package-options"></a>
-<a name="graphics-package-options"></a>
+<a name="Graphics-package-options" class="anchor"></a>
+<a name="graphics-package-options" class="anchor"></a>
 <h3 class="section">22.1 <code>graphics</code> package options</h3>
 
-<a name="index-graphics-package-options"></a>
-<a name="index-options_002c-graphics-package"></a>
+<a name="index-graphics-package-options" class="anchor"></a>
+<a name="index-options_002c-graphics-package" class="anchor"></a>
 
 <p>Synopsis (must be in the document preamble):
 </p>
@@ -217,18 +218,18 @@ option has LaTeX to read the size from the latter.
 
 
 <hr>
-<a name="Graphics-package-configuration"></a>
-<a name="graphics-package-configuration"></a>
+<a name="Graphics-package-configuration" class="anchor"></a>
+<a name="graphics-package-configuration" class="anchor"></a>
 <h3 class="section">22.2 <code>graphics</code> package configuration</h3>
 
-<a name="index-graphics-1"></a>
-<a name="index-graphics-package-1"></a>
-<a name="index-configuration_002c-graphics-package"></a>
-<a name="index-EPS-files"></a>
-<a name="index-JPEG-files"></a>
-<a name="index-JPG-files"></a>
-<a name="index-PDF-graphic-files"></a>
-<a name="index-PNG-files"></a>
+<a name="index-graphics-1" class="anchor"></a>
+<a name="index-graphics-package-1" class="anchor"></a>
+<a name="index-configuration_002c-graphics-package" class="anchor"></a>
+<a name="index-EPS-files" class="anchor"></a>
+<a name="index-JPEG-files" class="anchor"></a>
+<a name="index-JPG-files" class="anchor"></a>
+<a name="index-PDF-graphic-files" class="anchor"></a>
+<a name="index-PNG-files" class="anchor"></a>
 
 <p>These commands configure the way LaTeX searches the file system for
 the graphic.
@@ -242,11 +243,11 @@ TeX distribution&rsquo;s documentation.
 
 
 <hr>
-<a name="g_t_005cgraphicspath"></a>
-<a name="g_t_005cgraphicspath-1"></a>
+<a name="g_t_005cgraphicspath" class="anchor"></a>
+<a name="g_t_005cgraphicspath-1" class="anchor"></a>
 <h4 class="subsection">22.2.1 <code>\graphicspath</code></h4>
 
-<a name="index-_005cgraphicspath"></a>
+<a name="index-_005cgraphicspath" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -319,11 +320,11 @@ instead in <samp>book/plots</samp>.
 </p>
 
 <hr>
-<a name="g_t_005cDeclareGraphicsExtensions"></a>
-<a name="g_t_005cDeclareGraphicsExtensions-1"></a>
+<a name="g_t_005cDeclareGraphicsExtensions" class="anchor"></a>
+<a name="g_t_005cDeclareGraphicsExtensions-1" class="anchor"></a>
 <h4 class="subsection">22.2.2 <code>\DeclareGraphicsExtensions</code></h4>
 
-<a name="index-_005cDeclareGraphicsExtensions"></a>
+<a name="index-_005cDeclareGraphicsExtensions" class="anchor"></a>
 
 <p>Synopses:
 </p>
@@ -371,11 +372,11 @@ than once.  Show its value with
 </p>
 
 <hr>
-<a name="g_t_005cDeclareGraphicsRule"></a>
-<a name="g_t_005cDeclareGraphicsRule-1"></a>
+<a name="g_t_005cDeclareGraphicsRule" class="anchor"></a>
+<a name="g_t_005cDeclareGraphicsRule-1" class="anchor"></a>
 <h4 class="subsection">22.2.3 <code>\DeclareGraphicsRule</code></h4>
 
-<a name="index-_005cDeclareGraphicsRule"></a>
+<a name="index-_005cDeclareGraphicsRule" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -460,12 +461,12 @@ See the documentation for your TeX distribution.
 </dl>
 
 <hr>
-<a name="Commands-for-graphics"></a>
-<a name="Commands-for-graphics-1"></a>
+<a name="Commands-for-graphics" class="anchor"></a>
+<a name="Commands-for-graphics-1" class="anchor"></a>
 <h3 class="section">22.3 Commands for graphics</h3>
 
-<a name="index-graphics-package-commands"></a>
-<a name="index-commands_002c-graphics-package"></a>
+<a name="index-graphics-package-commands" class="anchor"></a>
+<a name="index-commands_002c-graphics-package" class="anchor"></a>
 
 <p>These are the commands available with the <samp>graphics</samp> and
 <samp>graphicx</samp> packages.
@@ -473,20 +474,20 @@ See the documentation for your TeX distribution.
 
 
 <hr>
-<a name="g_t_005cincludegraphics"></a>
-<a name="g_t_005cincludegraphics-1"></a>
+<a name="g_t_005cincludegraphics" class="anchor"></a>
+<a name="g_t_005cincludegraphics-1" class="anchor"></a>
 <h4 class="subsection">22.3.1 <code>\includegraphics</code></h4>
 
-<a name="index-graphics-2"></a>
-<a name="index-graphics-package-2"></a>
-<a name="index-including-graphics"></a>
-<a name="index-importing-graphics"></a>
-<a name="index-EPS-files-1"></a>
-<a name="index-JPEG-files-1"></a>
-<a name="index-JPG-files-1"></a>
-<a name="index-PDF-graphic-files-1"></a>
-<a name="index-PNG-files-1"></a>
-<a name="index-_005cincludegraphics"></a>
+<a name="index-graphics-2" class="anchor"></a>
+<a name="index-graphics-package-2" class="anchor"></a>
+<a name="index-including-graphics" class="anchor"></a>
+<a name="index-importing-graphics" class="anchor"></a>
+<a name="index-EPS-files-1" class="anchor"></a>
+<a name="index-JPEG-files-1" class="anchor"></a>
+<a name="index-JPG-files-1" class="anchor"></a>
+<a name="index-PDF-graphic-files-1" class="anchor"></a>
+<a name="index-PNG-files-1" class="anchor"></a>
+<a name="index-_005cincludegraphics" class="anchor"></a>
 
 <p>Synopses for <samp>graphics</samp> package:
 </p>
@@ -626,7 +627,7 @@ page it puts together boxes and this is the box allocated for the
 graphic.
 </p>
 <dl compact="compact">
-<dd><a name="includegraphics-width"></a></dd>
+<dd><a name="includegraphics-width" class="anchor"></a></dd>
 <dt><code>width</code></dt>
 <dd><p>The graphic will be shown so its bounding box is this width.  An example
 is <code>\includegraphics[width=1in]{plot}</code>.  You can use the standard
@@ -639,7 +640,7 @@ the width of the text with
 </p>
 </dd>
 <dt><code>height</code></dt>
-<dd><a name="includegraphics-height"></a><p>The graphic will be shown so its bounding box is this height.  You can
+<dd><a name="includegraphics-height" class="anchor"></a><p>The graphic will be shown so its bounding box is this height.  You can
 use the standard TeX dimensions (see <a href="latex2e_14.html#Units-of-length">Units of length</a>), and also
 convenient are <code>\pageheight</code> and <code>\textheight</code> (see <a href="latex2e_5.html#Page-layout-parameters">Page layout parameters</a>).  For instance, the command
 <code>\includegraphics[height=0.25\textheight]{godel}</code> will make the
@@ -647,14 +648,14 @@ graphic a quarter of the height of the text area.
 </p>
 </dd>
 <dt><code>totalheight</code></dt>
-<dd><a name="includegraphics-totalheght"></a><p>The graphic will be shown so its bounding box has this height plus
+<dd><a name="includegraphics-totalheght" class="anchor"></a><p>The graphic will be shown so its bounding box has this height plus
 depth.  This differs from the height if the graphic was rotated. For
 instance, if it has been rotated by -90 then it will have zero height
 but a large depth.
 </p>
 </dd>
 <dt><code>keepaspectratio</code></dt>
-<dd><a name="includegraphics-keepaspectratio"></a><p>If set to <code>true</code>, or just specified as here
+<dd><a name="includegraphics-keepaspectratio" class="anchor"></a><p>If set to <code>true</code>, or just specified as here
 </p>
 <div class="example">
 <pre class="example"><code>\includegraphics[...,keepaspectratio,...]{...}</code>
@@ -701,7 +702,7 @@ vertical center in <code>lc</code> or <code>rc</code>.)  The default is <code>lB
 <p>These are lesser-used options.
 </p>
 <dl compact="compact">
-<dd><a name="includegraphics-viewport"></a></dd>
+<dd><a name="includegraphics-viewport" class="anchor"></a></dd>
 <dt><code>viewport</code></dt>
 <dd><p>Pick out a subregion of the graphic to show.  Takes four arguments,
 separated by spaces and given in TeX dimensions, as with
@@ -710,7 +711,7 @@ dimensions default to big points,&nbsp;<code>bp</code>.  They are taken
 relative to the origin specified by the bounding box.  See also the
 <code>trim</code> option.
 </p>
-<a name="includegraphics-trim"></a></dd>
+<a name="includegraphics-trim" class="anchor"></a></dd>
 <dt><code>trim</code></dt>
 <dd><p>Gives parts of the graphic to not show.  Takes four arguments, separated
 by spaces, that are given in TeX dimensions, as with
@@ -720,7 +721,7 @@ will crop the picture by 0&nbsp;inches on the left, 0.1&nbsp;inches on
 the bottom, 0.2&nbsp;inches on the right, and 0.3&nbsp;inches on the
 top.  See also the <code>viewport</code> option.
 </p>
-<a name="includegraphics-clip"></a></dd>
+<a name="includegraphics-clip" class="anchor"></a></dd>
 <dt><code>clip</code></dt>
 <dd><p>If set to <code>true</code>, or just specified as here
 </p>
@@ -732,12 +733,12 @@ top.  See also the <code>viewport</code> option.
 using the starred form of the command,
 <code>\includegraphics*[...]{...}</code>.
 </p>
-<a name="includegraphics-page"></a></dd>
+<a name="includegraphics-page" class="anchor"></a></dd>
 <dt><code>page</code></dt>
 <dd><p>Give the page number of a multi-page PDF file.  The default is
 <code>page=1</code>.
 </p>
-<a name="includegraphics-pagebox"></a></dd>
+<a name="includegraphics-pagebox" class="anchor"></a></dd>
 <dt><code>pagebox</code></dt>
 <dd><p>Specifies which bounding box to use for PDF files from among
 <code>mediabox</code>, <code>cropbox</code>, <code>bleedbox</code>, <code>trimbox</code>, or
@@ -752,7 +753,7 @@ content.  The driver will set the image size based on CropBox if
 present, otherwise it will not use one of the others, with a
 driver-defined order of preference.  MediaBox is always present.
 </p>
-<a name="includegraphics-interpolate"></a></dd>
+<a name="includegraphics-interpolate" class="anchor"></a></dd>
 <dt><code>interpolate</code></dt>
 <dd><p>Enable or disable interpolation of raster images by the viewer.  Can be
 set with <code>interpolate=true</code> or just specified as here.
@@ -761,13 +762,13 @@ set with <code>interpolate=true</code> or just specified as here.
 <pre class="example">\includegraphics[...,interpolate,...]{...}
 </pre></div>
 
-<a name="includegraphics-quiet"></a></dd>
+<a name="includegraphics-quiet" class="anchor"></a></dd>
 <dt><code>quiet</code></dt>
 <dd><p>Do not write information to the log.  You can set it with
 <code>quiet=true</code> or just specified it with
 <code>\includegraphics[...,quite,...]{...}</code>,
 </p>
-<a name="includegraphics-draft"></a></dd>
+<a name="includegraphics-draft" class="anchor"></a></dd>
 <dt><code>draft</code></dt>
 <dd><p>If you set it with <code>draft=true</code> or just specify it with
 </p>
@@ -793,7 +794,7 @@ For example, if an <samp>.eps</samp> file has the line <code>%%BoundingBox 10
 60/72&nbsp;inch tall.
 </p>
 <dl compact="compact">
-<dd><a name="includegraphics-bb"></a></dd>
+<dd><a name="includegraphics-bb" class="anchor"></a></dd>
 <dt><code>bb</code></dt>
 <dd><p>Specify the bounding box of the displayed region.  The argument is four
 dimensions separated by spaces, as with <code>\includegraphics[.., bb=
@@ -802,12 +803,12 @@ BoundingBox numbers from the EPS file automatically, so this option is
 only useful if the bounding box is missing from that file or if you want
 to change it.
 </p>
-<a name="includegraphics-bbllx"></a><a name="includegraphics-bblly"></a><a name="includegraphics-bburx"></a><a name="includegraphics-bbury"></a></dd>
+<a name="includegraphics-bbllx" class="anchor"></a><a name="includegraphics-bblly" class="anchor"></a><a name="includegraphics-bburx" class="anchor"></a><a name="includegraphics-bbury" class="anchor"></a></dd>
 <dt><code>bbllx, bblly, bburx, bbury</code></dt>
 <dd><p>Set the bounding box.  These four are obsolete, but are retained for
 compatibility with old packages.
 </p>
-<a name="includegraphics-natwidth"></a><a name="includegraphics-natheight"></a></dd>
+<a name="includegraphics-natwidth" class="anchor"></a><a name="includegraphics-natheight" class="anchor"></a></dd>
 <dt><code>natwidth, natheight</code></dt>
 <dd><p>An alternative for <code>bb</code>.  Setting
 </p>
@@ -817,7 +818,7 @@ compatibility with old packages.
 
 <p>is the same as setting <code>bb=0 0 1in 0.618in</code>.
 </p> 
-<a name="includegraphics-hiresbb"></a></dd>
+<a name="includegraphics-hiresbb" class="anchor"></a></dd>
 <dt><code>hiresbb</code></dt>
 <dd><p>If set to <code>true</code>, or just specified as with
 </p>
@@ -841,21 +842,21 @@ will read the file <samp>lion.xxx</samp> as though it were
 <samp>lion.png</samp>. For more on these, see <a href="#g_t_005cDeclareGraphicsRule">\DeclareGraphicsRule</a>.
 </p>
 <dl compact="compact">
-<dd><a name="includegraphics-type"></a></dd>
+<dd><a name="includegraphics-type" class="anchor"></a></dd>
 <dt><code>type</code></dt>
 <dd><p>Specify the graphics type.
 </p>
-<a name="includegraphics-ext"></a></dd>
+<a name="includegraphics-ext" class="anchor"></a></dd>
 <dt><code>ext</code></dt>
 <dd><p>Specify the graphics extension.
 Only use this in conjunction with the option <code>type</code>.
 </p>
-<a name="includegraphics-read"></a></dd>
+<a name="includegraphics-read" class="anchor"></a></dd>
 <dt><code>read</code></dt>
 <dd><p>Specify the file extension of the read file.
 Only use this in conjunction with the option <code>type</code>.
 </p>
-<a name="includegraphics-command"></a></dd>
+<a name="includegraphics-command" class="anchor"></a></dd>
 <dt><code>command</code></dt>
 <dd><p>Specify a command to be applied to this file.  Only use this in
 conjunction with the option <code>type</code>.  See <a href="latex2e_28.html#Command-line-options">Command line options</a>
@@ -867,14 +868,14 @@ external commands.
 
 
 <hr>
-<a name="g_t_005crotatebox"></a>
-<a name="g_t_005crotatebox-1"></a>
+<a name="g_t_005crotatebox" class="anchor"></a>
+<a name="g_t_005crotatebox-1" class="anchor"></a>
 <h4 class="subsection">22.3.2 <code>\rotatebox</code></h4>
 
-<a name="index-rotation"></a>
-<a name="index-rotating-graphics"></a>
-<a name="index-rotating-text"></a>
-<a name="index-_005crotatebox"></a>
+<a name="index-rotation" class="anchor"></a>
+<a name="index-rotating-graphics" class="anchor"></a>
+<a name="index-rotating-text" class="anchor"></a>
+<a name="index-_005crotatebox" class="anchor"></a>
 
 <p>Synopsis if you use the <samp>graphics</samp> package:
 </p>
@@ -961,18 +962,18 @@ setting <code>units=6.283185</code> changes to radians counterclockwise.
 
 
 <hr>
-<a name="g_t_005cscalebox"></a>
-<a name="g_t_005cscalebox-1"></a>
+<a name="g_t_005cscalebox" class="anchor"></a>
+<a name="g_t_005cscalebox-1" class="anchor"></a>
 <h4 class="subsection">22.3.3 <code>\scalebox</code></h4>
 
-<a name="index-graphics_002c-scaling"></a>
-<a name="index-graphics_002c-resizing"></a>
-<a name="index-scaling"></a>
-<a name="index-resizing"></a>
-<a name="index-text_002c-scaling"></a>
-<a name="index-text_002c-resizing"></a>
-<a name="index-_005cscalebox"></a>
-<a name="index-_005creflectbox"></a>
+<a name="index-graphics_002c-scaling" class="anchor"></a>
+<a name="index-graphics_002c-resizing" class="anchor"></a>
+<a name="index-scaling" class="anchor"></a>
+<a name="index-resizing" class="anchor"></a>
+<a name="index-text_002c-scaling" class="anchor"></a>
+<a name="index-text_002c-resizing" class="anchor"></a>
+<a name="index-_005cscalebox" class="anchor"></a>
+<a name="index-_005creflectbox" class="anchor"></a>
 
 <p>Synopses:
 </p>
@@ -1011,17 +1012,17 @@ immediately followed by its mirror reflection.
 </p>
 
 <hr>
-<a name="g_t_005cresizebox"></a>
-<a name="g_t_005cresizebox-1"></a>
+<a name="g_t_005cresizebox" class="anchor"></a>
+<a name="g_t_005cresizebox-1" class="anchor"></a>
 <h4 class="subsection">22.3.4 <code>\resizebox</code></h4>
 
-<a name="index-graphics_002c-scaling-1"></a>
-<a name="index-graphics_002c-resizing-1"></a>
-<a name="index-scaling-1"></a>
-<a name="index-resizing-1"></a>
-<a name="index-text_002c-scaling-1"></a>
-<a name="index-text_002c-resizing-1"></a>
-<a name="index-_005cresizebox"></a>
+<a name="index-graphics_002c-scaling-1" class="anchor"></a>
+<a name="index-graphics_002c-resizing-1" class="anchor"></a>
+<a name="index-scaling-1" class="anchor"></a>
+<a name="index-resizing-1" class="anchor"></a>
+<a name="index-text_002c-scaling-1" class="anchor"></a>
+<a name="index-text_002c-resizing-1" class="anchor"></a>
+<a name="index-_005cresizebox" class="anchor"></a>
 
 <p>Synopses:
 </p>
