--- a/data/resources/help/latex2e_26.html
+++ b/data/resources/help/latex2e_26.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_25.html#g_t_005cgls" rel="prev" title="\gls">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,12 +86,12 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Letters"></a>
-<a name="Letters-1"></a>
+<a name="Letters" class="anchor"></a>
+<a name="Letters-1" class="anchor"></a>
 <h2 class="chapter">26 Letters</h2>
 
-<a name="index-letters_002c-writing"></a>
-<a name="index-writing-letters"></a>
+<a name="index-letters_002c-writing" class="anchor"></a>
+<a name="index-writing-letters" class="anchor"></a>
 
 <p>Synopsis: 
 </p>
@@ -140,7 +141,7 @@ such as <code>\chapter</code> that make no sense in a letter are turned off.
 Each <code>letter</code> environment body typically ends with a
 <code>\closing</code> command such as <code>\closing{Yours,}</code>.
 </p>
-<a name="index-_005c_005c-for-letters"></a>
+<a name="index-_005c_005c-for-letters" class="anchor"></a>
 <p>Additional material may come after the <code>\closing</code>.  You can say who
 is receiving a copy of the letter with a command like <code>\cc{the
 Boss \\ the Boss's Boss}</code>.  There&rsquo;s a similar <code>\encl</code> command for
@@ -179,11 +180,11 @@ I am not interested in entering a business arrangement with you.
 
 
 <hr>
-<a name="g_t_005caddress"></a>
-<a name="g_t_005caddress-1"></a>
+<a name="g_t_005caddress" class="anchor"></a>
+<a name="g_t_005caddress-1" class="anchor"></a>
 <h3 class="section">26.1 <code>\address</code></h3>
 
-<a name="index-_005caddress"></a>
+<a name="index-_005caddress" class="anchor"></a>
 
 <p>Synopsis: 
 </p>
@@ -213,12 +214,12 @@ is formatted as a personal letter.
 
 
 <hr>
-<a name="g_t_005ccc"></a>
-<a name="g_t_005ccc-1"></a>
+<a name="g_t_005ccc" class="anchor"></a>
+<a name="g_t_005ccc-1" class="anchor"></a>
 <h3 class="section">26.2 <code>\cc</code></h3>
 
-<a name="index-_005ccc"></a>
-<a name="index-cc-list_002c-in-letters"></a>
+<a name="index-_005ccc" class="anchor"></a>
+<a name="index-cc-list_002c-in-letters" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -239,13 +240,13 @@ with a double backslash, <code>\\</code>, as in:
 
 
 <hr>
-<a name="g_t_005cclosing"></a>
-<a name="g_t_005cclosing-1"></a>
+<a name="g_t_005cclosing" class="anchor"></a>
+<a name="g_t_005cclosing-1" class="anchor"></a>
 <h3 class="section">26.3 <code>\closing</code></h3>
 
-<a name="index-_005cclosing"></a>
-<a name="index-letters_002c-ending"></a>
-<a name="index-closing-letters"></a>
+<a name="index-_005cclosing" class="anchor"></a>
+<a name="index-letters_002c-ending" class="anchor"></a>
+<a name="index-closing-letters" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -262,12 +263,12 @@ at the end of a letter, above a handwritten signature.  For example:
 
 
 <hr>
-<a name="g_t_005cencl"></a>
-<a name="g_t_005cencl-1"></a>
+<a name="g_t_005cencl" class="anchor"></a>
+<a name="g_t_005cencl-1" class="anchor"></a>
 <h3 class="section">26.4 <code>\encl</code></h3>
 
-<a name="index-_005cencl"></a>
-<a name="index-enclosure-list"></a>
+<a name="index-_005cencl" class="anchor"></a>
+<a name="index-enclosure-list" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -287,11 +288,11 @@ Separate multiple lines with a double backslash, <code>\\</code>.
 
 
 <hr>
-<a name="g_t_005clocation"></a>
-<a name="g_t_005clocation-1"></a>
+<a name="g_t_005clocation" class="anchor"></a>
+<a name="g_t_005clocation-1" class="anchor"></a>
 <h3 class="section">26.5 <code>\location</code></h3>
 
-<a name="index-_005clocation"></a>
+<a name="index-_005clocation" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -304,11 +305,11 @@ appears if the page style is <code>firstpage</code>.
 </p>
 
 <hr>
-<a name="g_t_005cmakelabels"></a>
-<a name="g_t_005cmakelabels-1"></a>
+<a name="g_t_005cmakelabels" class="anchor"></a>
+<a name="g_t_005cmakelabels-1" class="anchor"></a>
 <h3 class="section">26.6 <code>\makelabels</code></h3>
 
-<a name="index-_005cmakelabels"></a>
+<a name="index-_005cmakelabels" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -364,8 +365,8 @@ columns having two labels each.
 <p>The first column contains the return address twice.  The second column
 contains the address for each recipient.
 </p>
-<a name="index-package_002c-envlab"></a>
-<a name="index-envlab-package"></a>
+<a name="index-package_002c-envlab" class="anchor"></a>
+<a name="index-envlab-package" class="anchor"></a>
 
 <p>The package <code>envlab</code> makes formatting the labels easier, with
 standard sizes already provided.  The preamble lines
@@ -374,11 +375,11 @@ are all that you need to print envelopes.
 </p>
 
 <hr>
-<a name="g_t_005cname"></a>
-<a name="g_t_005cname-1"></a>
+<a name="g_t_005cname" class="anchor"></a>
+<a name="g_t_005cname-1" class="anchor"></a>
 <h3 class="section">26.7 <code>\name</code></h3>
 
-<a name="index-_005cname"></a>
+<a name="index-_005cname" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -391,12 +392,12 @@ with the return address.
 </p>
 
 <hr>
-<a name="g_t_005copening"></a>
-<a name="g_t_005copening-1"></a>
+<a name="g_t_005copening" class="anchor"></a>
+<a name="g_t_005copening-1" class="anchor"></a>
 <h3 class="section">26.8 <code>\opening</code></h3>
 
-<a name="index-_005copening"></a>
-<a name="index-letters_002c-starting"></a>
+<a name="index-_005copening" class="anchor"></a>
+<a name="index-letters_002c-starting" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -413,11 +414,11 @@ with the return address.
 
 
 <hr>
-<a name="g_t_005cps"></a>
-<a name="g_t_005cps-1"></a>
+<a name="g_t_005cps" class="anchor"></a>
+<a name="g_t_005cps-1" class="anchor"></a>
 <h3 class="section">26.9 <code>\ps</code></h3>
-<a name="index-_005cps"></a>
-<a name="index-postscript_002c-in-letters"></a>
+<a name="index-_005cps" class="anchor"></a>
+<a name="index-postscript_002c-in-letters" class="anchor"></a>
 
 <p>Synopsis:
 </p>
@@ -434,8 +435,8 @@ with the return address.
 
 
 <hr>
-<a name="g_t_005csignature"></a>
-<a name="g_t_005csignature-1"></a>
+<a name="g_t_005csignature" class="anchor"></a>
+<a name="g_t_005csignature-1" class="anchor"></a>
 <h3 class="section">26.10 <code>\signature</code></h3>
 
 <p>Synopsis:
@@ -445,7 +446,7 @@ with the return address.
             ... }
 </pre></div>
 
-<a name="index-_005csignature"></a>
+<a name="index-_005csignature" class="anchor"></a>
 
 <p>The sender&rsquo;s name.  This command is optional, although its inclusion is
 usual.
@@ -485,11 +486,11 @@ the document.  To have it apply to one letter only, put it inside a
 
 
 <hr>
-<a name="g_t_005ctelephone"></a>
-<a name="g_t_005ctelephone-1"></a>
+<a name="g_t_005ctelephone" class="anchor"></a>
+<a name="g_t_005ctelephone-1" class="anchor"></a>
 <h3 class="section">26.11 <code>\telephone</code></h3>
 
-<a name="index-_005ctelephone"></a>
+<a name="index-_005ctelephone" class="anchor"></a>
 
 <p>Synopsis:
 </p>
