--- a/data/resources/help/latex2e_27.html
+++ b/data/resources/help/latex2e_27.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_26.html#g_t_005ctelephone" rel="prev" title="\telephone">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,21 +86,21 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Terminal-input_002foutput"></a>
-<a name="Terminal-input_002foutput-1"></a>
+<a name="Terminal-input_002foutput" class="anchor"></a>
+<a name="Terminal-input_002foutput-1" class="anchor"></a>
 <h2 class="chapter">27 Terminal input/output</h2>
 
-<a name="index-input_002foutput_002c-to-terminal"></a>
-<a name="index-terminal-input_002foutput"></a>
+<a name="index-input_002foutput_002c-to-terminal" class="anchor"></a>
+<a name="index-terminal-input_002foutput" class="anchor"></a>
 
 
 
 <hr>
-<a name="g_t_005ctypein"></a>
-<a name="g_t_005ctypein-1"></a>
+<a name="g_t_005ctypein" class="anchor"></a>
+<a name="g_t_005ctypein-1" class="anchor"></a>
 <h3 class="section">27.1 <code>\typein</code></h3>
 
-<a name="index-_005ctypein"></a>
+<a name="index-_005ctypein" class="anchor"></a>
 
 <p>Synopsis, one of:
 </p>
@@ -155,11 +156,11 @@ Recommendation for John Dee.
 </p>
 
 <hr>
-<a name="g_t_005ctypeout"></a>
-<a name="g_t_005ctypeout-1"></a>
+<a name="g_t_005ctypeout" class="anchor"></a>
+<a name="g_t_005ctypeout-1" class="anchor"></a>
 <h3 class="section">27.2 <code>\typeout</code></h3>
 
-<a name="index-_005ctypeout"></a>
+<a name="index-_005ctypeout" class="anchor"></a>
 
 <p>Synopsis:
 </p>
