--- a/data/resources/help/latex2e_30.html
+++ b/data/resources/help/latex2e_30.html
@@ -53,7 +53,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_29.html#tugboat-template" rel="prev" title="tugboat template">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -84,11 +85,11 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Index"></a>
-<a name="Index-1"></a>
+<a name="Index" class="anchor"></a>
+<a name="Index-1" class="anchor"></a>
 <h2 class="unnumbered">Index</h2>
 
-<a name="Command-Index"></a>
+<a name="Command-Index" class="anchor"></a>
 <table><tr><th valign="top">Jump to: &nbsp; </th><td><a class="summary-letter" href="#Index_cp_symbol-1"><b>&amp;</b></a>
  &nbsp; 
 <a class="summary-letter" href="#Index_cp_symbol-2"><b>*</b></a>
