--- a/data/resources/help/latex2e_29.html
+++ b/data/resources/help/latex2e_29.html
@@ -54,7 +54,8 @@ into another language, under the above conditions for modified versions. -->
 <link href="latex2e_28.html#Recovering-from-errors" rel="prev" title="Recovering from errors">
 <style type="text/css">
 <!--
-body { margin: 1em; margin-top: 0px; padding-top: 1px; }
+body {margin: 1em; margin-top: 0px; padding-top: 1px}
+a.anchor {float: right}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -85,12 +86,12 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body id="top" lang="en">
-<a name="Document-templates"></a>
-<a name="Document-templates-1"></a>
+<a name="Document-templates" class="anchor"></a>
+<a name="Document-templates-1" class="anchor"></a>
 <h2 class="appendix">Appendix A Document templates</h2>
 
-<a name="index-document-templates"></a>
-<a name="index-templates_002c-document"></a>
+<a name="index-document-templates" class="anchor"></a>
+<a name="index-templates_002c-document" class="anchor"></a>
 
 <p>Although not reference material, perhaps these document templates will
 be useful.  Additional template resources are listed at
@@ -99,12 +100,12 @@ be useful.  Additional template resources are listed at
 
 
 <hr>
-<a name="beamer-template"></a>
-<a name="beamer-template-1"></a>
+<a name="beamer-template" class="anchor"></a>
+<a name="beamer-template-1" class="anchor"></a>
 <h3 class="section">A.1 <code>beamer</code> template</h3>
 
-<a name="index-beamer-template-and-class"></a>
-<a name="index-template_002c-beamer"></a>
+<a name="index-beamer-template-and-class" class="anchor"></a>
+<a name="index-template_002c-beamer" class="anchor"></a>
 
 <p>The <code>beamer</code> class creates presentation slides.  It has a vast
 array of features, but here is a basic template:
@@ -136,11 +137,11 @@ array of features, but here is a basic template:
 </p>
 
 <hr>
-<a name="article-template"></a>
-<a name="article-template-1"></a>
+<a name="article-template" class="anchor"></a>
+<a name="article-template-1" class="anchor"></a>
 <h3 class="section">A.2 <code>article</code> template</h3>
 
-<a name="index-template_002c-article"></a>
+<a name="index-template_002c-article" class="anchor"></a>
 
 <pre class="verbatim">\documentclass{article}
 \title{Article Class Template}
@@ -161,11 +162,11 @@ Some more text.
 </pre>
 
 <hr>
-<a name="book-template"></a>
-<a name="book-template-1"></a>
+<a name="book-template" class="anchor"></a>
+<a name="book-template-1" class="anchor"></a>
 <h3 class="section">A.3 <code>book</code> template</h3>
 
-<a name="index-template_002c-book"></a>
+<a name="index-template_002c-book" class="anchor"></a>
 
 <p>This is a straightforward template for a book.  See See <a href="#Larger-book-template">Larger book template</a> for a more elaborate one.
 </p>
@@ -188,11 +189,11 @@ The end.
 </pre>
 
 <hr>
-<a name="Larger-book-template"></a>
-<a name="Larger-book-template-1"></a>
+<a name="Larger-book-template" class="anchor"></a>
+<a name="Larger-book-template-1" class="anchor"></a>
 <h3 class="section">A.4 Larger <code>book</code> template</h3>
 
-<a name="index-template_002c-book-1"></a>
+<a name="index-template_002c-book-1" class="anchor"></a>
 
 <p>This is a more elaborate template for a book.  It has
 <code>\frontmatter</code>, <code>\mainmatter</code>, and <code>\backmatter</code> to
@@ -244,13 +245,13 @@ come on a new page is brought in with <code>\input</code> instead of
 </pre>
 
 <hr>
-<a name="tugboat-template"></a>
-<a name="tugboat-template-1"></a>
+<a name="tugboat-template" class="anchor"></a>
+<a name="tugboat-template-1" class="anchor"></a>
 <h3 class="section">A.5 <code>tugboat</code> template</h3>
 
-<a name="index-template_002c-TUGboat"></a>
-<a name="index-TUGboat-template"></a>
-<a name="index-ltugboat-class"></a>
+<a name="index-template_002c-TUGboat" class="anchor"></a>
+<a name="index-TUGboat-template" class="anchor"></a>
+<a name="index-ltugboat-class" class="anchor"></a>
 
 <p><cite>TUGboat</cite> is the journal of the TeX Users Group,
 <a href="http://tug.org/TUGboat">http://tug.org/TUGboat</a>.
